--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p><a href="https://rs.school/">RsSchool</a></p>
         </section>
         <p class="li">
-            <img src="https://app.rs.school/static/images/logo-rsschool3.png" width="300" height="100" agign="right">
+            <img src="https://app.rs.school/static/images/logo-rsschool3.png" width="300" height="100" agign="right" alt="фото для cv">
         </p>
         <p class="copyright">© 2021</p>
         <p><a href="https://lapai1.io/rsschool-cv/" rel="nofollow">Исходный код</a></p>
